Add navigation and hero page section

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,81 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TimeTrend</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
+    <link rel="stylesheet" href="./styles/main.css">
 </head>
 
 <body>
+    <section id="header">
+        <a href="#"><img src="./img/logo.png" class="logo" alt="logo" width="80"></a>
+        <nav>
+            <ul class="navbar">
+                <li><a class="active" href="/index.html">Home</a></li>
+                <li><a href="/products.html">Shop</a></li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/reviews.html">Reviews</a></li>
+                <!-- <li><a href="/account.html"><img src="./img/user-icon.png" alt="user-icon" width="24"></a></li>
+                <li><a href="/cart.html"><img src="./img/bag-icon.png" alt="bag-icon" width="24"></a></li> -->
+            </ul>
+        </nav>
+        <ul class="navbar">
+            <li><a href="/account.html"><img src="./img/user-icon.png" alt="user-icon" width="24"></a></li>
+            <li><a href="/cart.html"><img src="./img/bag-icon.png" alt="bag-icon" width="24"></a></li>
+        </ul>
+    </section>
 
+    <section id="hero">
+        <!-- <h4>Trade in offer</h4>
+        <h2>Super value deals</h2>
+        <h1>On all products</h1>
+        <p>Save more with coupons & up to 70% off!</p>
+        <a href="#">Shop Now</a> -->
+        <h2>Limited Time Offer!</h2>
+        <h1>Enjoy Big Savings Now!</h1>
+        <h4>Get exclusive discounts on all products.</h4>
+        <div class="distance">
+            <button>Shop Now</button>
+        </div>
+        <!-- <img src="./img/pexels-chloe-1043474-Photoroom.png-Photoroom.png" alt=""> -->
+    </section>
+
+    <!-- <section id="product1" class="section-p1">
+        <h2>Latest Products</h2>
+        <p>Explore our newest products and stay ahead of the trends.</p>
+        <div class="pro-container">
+            <div class="pro">
+                <img src="./img/t-shirt-model.jpg" alt="t-shirt-model">
+                <div class="des">
+                    <p>nike</p>
+                    <h5>Nike T-shirt</h5>
+                    <div class="rating">
+                        <span><img src="./img/star.png" width="24"></span>
+                        <span><img src="./img/star.png" width="24"></span>
+                        <span><img src="./img/star.png" width="24"></span>
+                        <span><img src="./img/star.png" width="24"></span>
+                        <span><img src="./img/star.png" width="24"></span>
+                    </div>
+                    <h4>78$</h4>
+                    <a href="#" class="cart"><img src="./img/shopping-cart.png" width="24"></a>
+                </div>
+            </div>
+
+        </div>
+    </section> -->
+
+    <section class="section new-arrival">
+        <div class="title">
+            <h2>Latest Products</h2>
+            <p>Explore our newest products and stay ahead of the trends.</p>
+        </div>
+
+        <div class="product-center">
+
+        </div>
+    </section>
 </body>
 
 </html>
