--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TimeTrend</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" /> -->
     <link rel="stylesheet" href="./styles/main.css">
 </head>
 
@@ -44,29 +45,6 @@
         <!-- <img src="./img/pexels-chloe-1043474-Photoroom.png-Photoroom.png" alt=""> -->
     </section>
 
-    <!-- <section id="product1" class="section-p1">
-        <h2>Latest Products</h2>
-        <p>Explore our newest products and stay ahead of the trends.</p>
-        <div class="pro-container">
-            <div class="pro">
-                <img src="./img/t-shirt-model.jpg" alt="t-shirt-model">
-                <div class="des">
-                    <p>nike</p>
-                    <h5>Nike T-shirt</h5>
-                    <div class="rating">
-                        <span><img src="./img/star.png" width="24"></span>
-                        <span><img src="./img/star.png" width="24"></span>
-                        <span><img src="./img/star.png" width="24"></span>
-                        <span><img src="./img/star.png" width="24"></span>
-                        <span><img src="./img/star.png" width="24"></span>
-                    </div>
-                    <h4>78$</h4>
-                    <a href="#" class="cart"><img src="./img/shopping-cart.png" width="24"></a>
-                </div>
-            </div>
-
-        </div>
-    </section> -->
 
     <section class="section new-arrival">
         <div class="title">
@@ -75,9 +53,89 @@
         </div>
 
         <div class="product-center">
-
+            <div class="product-item">
+                <div class="overlay">
+                    <a href="#" class="product-thumb">
+                        <img src="./img/t-shirt-model.jpg" alt="product">
+                    </a>
+                </div>
+                <div class="product-info">
+                    <span>MEN'S CLOTHES</span>
+                    <h4 class="product-name">Nike T-Shirt</h4>
+                    <h4 class="price">$1700</h4>
+                </div>
+                <ul class="icons">
+                    <li><i class="fa-solid fa-magnifying-glass"></i></li>
+                    <li><i class="fa-solid fa-cart-shopping"></i></li>
+                </ul>
+            </div>
+            <div class="product-item">
+                <div class="overlay">
+                    <a href="#" class="product-thumb">
+                        <img src="./img/t-shirt-model.jpg" alt="product">
+                    </a>
+                </div>
+                <div class="product-info">
+                    <span>MEN'S CLOTHES</span>
+                    <h4 class="product-name">Nike T-Shirt</h4>
+                    <h4 class="price">$1700</h4>
+                </div>
+                <ul class="icons">
+                    <li><i class="fa-solid fa-magnifying-glass"></i></li>
+                    <li><i class="fa-solid fa-cart-shopping"></i></li>
+                </ul>
+            </div>
+            <div class="product-item">
+                <div class="overlay">
+                    <a href="#" class="product-thumb">
+                        <img src="./img/t-shirt-model.jpg" alt="product">
+                    </a>
+                </div>
+                <div class="product-info">
+                    <span>MEN'S CLOTHES</span>
+                    <h4 class="product-name">Nike T-Shirt</h4>
+                    <h4 class="price">$1700</h4>
+                </div>
+                <ul class="icons">
+                    <li><i class="fa-solid fa-magnifying-glass"></i></li>
+                    <li><i class="fa-solid fa-cart-shopping"></i></li>
+                </ul>
+            </div>
+            <div class="product-item">
+                <div class="overlay">
+                    <a href="#" class="product-thumb">
+                        <img src="./img/t-shirt-model.jpg" alt="product">
+                    </a>
+                </div>
+                <div class="product-info">
+                    <span>MEN'S CLOTHES</span>
+                    <h4 class="product-name">Nike T-Shirt</h4>
+                    <h4 class="price">$1700</h4>
+                </div>
+                <ul class="icons">
+                    <li><i class="fa-solid fa-magnifying-glass"></i></li>
+                    <li><i class="fa-solid fa-cart-shopping"></i></li>
+                </ul>
+            </div>
+            <div class="product-item">
+                <div class="overlay">
+                    <a href="#" class="product-thumb">
+                        <img src="./img/t-shirt-model.jpg" alt="product">
+                    </a>
+                </div>
+                <div class="product-info">
+                    <span>MEN'S CLOTHES</span>
+                    <h4 class="product-name">Nike T-Shirt</h4>
+                    <h4 class="price">$1700</h4>
+                </div>
+                <ul class="icons">
+                    <li><i class="fa-solid fa-magnifying-glass"></i></li>
+                    <li><i class="fa-solid fa-cart-shopping"></i></li>
+                </ul>
+            </div>
         </div>
     </section>
+
 </body>
 
 </html>
