--- a/templates/styles/main.css
+++ b/templates/styles/main.css
@@ -201,68 +201,173 @@ body {
 }
 
 /* !LATEST PRODUCTS SECTION */
-#product1 {
+.title {
+  text-align: center;
+  margin-top: 4rem;
+  margin-bottom: 5rem;
+}
+
+.title h2 {
+  font-size: 4rem;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+  font-weight: 500;
+  color: #dc143c;
+}
+
+.title p {
+  font-size: 20px;
+}
+
+.product-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  max-width: 120rem; /* You can adjust this value as needed */
+  margin: 0 auto;
+  padding: 0 2rem;
+}
+
+.product-item {
+  position: relative;
+  width: calc(20% - 2rem); /* 20% width for each product with some margin */
+  margin: 0 1rem; /* Adjust margin as needed */
+  margin-bottom: 3rem;
+}
+
+.product-thumb img {
+  width: 100%;
+  height: 31rem;
+  object-fit: cover;
+  transition: all 500ms linear;
+}
+
+.product-info {
+  padding: 1rem;
   text-align: center;
 }
 
-#product1 .pro {
-  width: 23%;
-  min-width: 250px;
-  padding: 10px 12px;
-  border: 1px solid #cce7d0;
-  cursor: pointer;
-  box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
-  margin: 15px 0;
-  transition: 0.2s ease;
+.product-info span {
+  display: inline-block;
+  font-size: 1rem;
+  text-transform: uppercase;
+  color: #666;
+  margin-bottom: 0.5rem;
 }
 
-#product1 .pro:hover {
-  box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.15);
+.product-info .product-name {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: normal;
+  margin-bottom: 0.1rem;
+  /* transition: all 300ms linear; */
 }
 
-#product1 .pro img {
-  width: 100%;
-  border-radius: 20px;
+.product-info .price {
+  font-size: 1.2rem;
+  color: #dc143c;
 }
 
-#product1 .pro .des {
-  text-align: start;
-  padding: 10px 0;
-}
+/* .product-info a:hover {
+  color: var(--green);
+} */
 
-#product1 .pro .des span {
-  color: #606063;
-  font-size: 12px;
-}
-
-#product1 .pro .des h5 {
-  /* padding-top: 2px; */
-  color: #1a1a1a;
-  font-size: 14px;
-}
-
-#product1 .rating {
+.product-item .icons {
+  position: absolute;
+  left: 50%;
+  top: 35%;
+  transform: translateX(-50%);
   display: flex;
-  flex-direction: row;
+  align-items: center;
 }
 
-#product1 .pro .des h4 {
-  padding-top: 7px;
-  font-size: 15px;
-  font-weight: 700;
-  color: #088178;
+.product-item .icons li {
+  list-style: none;
+  background-color: #fff;
+  text-align: center;
+  padding: 1rem 1.5rem;
+  font-size: 2.3rem;
+  cursor: pointer;
+  transition: 200ms ease-in-out;
+  transform: translateY(20px);
+  visibility: hidden;
+  opacity: 0;
 }
 
-#product1 .pro .cart {
-  width: 40px;
-  height: 40px;
-  line-height: 40px;
-  border-radius: 50px;
-  background-color: #e8f6ea;
-  font-weight: 500;
-  color: #088178;
+.product-item .icons li:first-child {
+  transition-delay: 0.1s;
 }
 
-#product1 .pro .cart img {
+.product-item .icons li:nth-child(2) {
+  transition-delay: 0.2s;
+}
+
+.product-item:hover .icons li {
+  visibility: visible;
+  opacity: 1;
+  transform: translateY(0px);
+}
+
+/* .product-item .icons li i {
+  color: #dc143c;
+  background-color: #fff;
+} */
+
+.product-item .icons li:not(:last-child) {
+  margin-right: 0.5rem;
+}
+
+.product-item .icons li:hover,
+.product-item .icons li:hover i {
+  /* background-color: #dc143c;
+  color: #fff; */
+}
+
+.product-item .icons li {
+  background-color: #fff;
+}
+
+.product-item .icons li i {
+  color: #dc143c;
+}
+
+.product-item .icons li:hover {
+  background-color: #dc143c;
+  transition-delay: 0.05s;
+}
+
+.product-item .icons li:hover i {
+  color: #fff;
+  transition-delay: 0.05s;
+}
+
+.product-item .overlay {
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  z-index: -1;
   width: 100%;
+}
+
+.product-item .overlay::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  visibility: hidden;
+  opacity: 0;
+  transition: 300ms ease;
+}
+
+.product-item:hover .overlay::after {
+  visibility: visible;
+  opacity: 1;
+}
+
+.product-item:hover .product-thumb img {
+  transform: scale(1.1);
 }
