--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,6 @@
         <!-- <img src="./img/pexels-chloe-1043474-Photoroom.png-Photoroom.png" alt=""> -->
     </section>
 
-
     <section class="section new-arrival">
         <div class="title">
             <h2>Latest Products</h2>
@@ -65,7 +64,7 @@
                     <h4 class="price">$1700</h4>
                 </div>
                 <ul class="icons">
-                    <li><i class="fa-solid fa-magnifying-glass"></i></li>
+                    <li><a href="/aboput.html"><i class="fa-solid fa-magnifying-glass"></i></a></li>
                     <li><i class="fa-solid fa-cart-shopping"></i></li>
                 </ul>
             </div>
@@ -136,6 +135,64 @@
         </div>
     </section>
 
+    <!-- PROMOTIONS SECTION -->
+
+    <!-- NEWSLETTER SECTION -->
+
+    <!-- FOOTER -->
+    <footer>
+        <div class="info">
+            <div class="col">
+                <img src="./img/logo.png" alt="logo" width="100" class="logo">
+                <h4>Contact</h4>
+                <p><strong>Address:</strong> 562 Wellington Rood, Street 32, San Francisco</p>
+                <p><strong>Phone to:</strong> 088 888 8888/088 999 9999</p>
+                <p><strong>Hours: </strong> 10:00 - 18:00, Monday - Saturday</p>
+                <div class="follow">
+                    <h4>Follow us</h4>
+                    <div class="icon">
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-x-twitter"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-youtube"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <h4>About</h4>
+                <a href="#">About us</a>
+                <a href="#">Delivery Information</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Terms & Conditions</a>
+                <a href="#">Contact us</a>
+            </div>
+
+            <div class="col">
+                <h4>My Account</h4>
+                <a href="#">Sign in</a>
+                <a href="#">View Cart</a>
+                <a href="#">My Wishlist</a>
+                <a href="#">Track My Order</a>
+                <a href="#">Help</a>
+            </div>
+
+            <div class="col install">
+                <h4>Install App</h4>
+                <p>From App Store or Google Play</p>
+                <div class="row">
+                    <img src="img/app-store.jpg" alt="Icon of App Store">
+                    <img src="img/google-play.jpg" alt="Icon of Google Play">
+                </div>
+                <p>Secured Payment Gateways</p>
+                <img src="./img/pay.png" alt="Secured Payments Image">
+            </div>
+        </div>
+
+        <div class="copyright">
+            <p>@ 2024, All rights reserved</p>
+        </div>
+    </footer>
 </body>
 
 </html>
