--- a/templates/index.html
+++ b/templates/index.html
@@ -136,6 +136,21 @@
     </section>
 
     <!-- PROMOTIONS SECTION -->
+    <section id="banners">
+        <div class="banner-box1">
+            <h2>Sportswear Sale</h2>
+            <h3>Score big savings on top brands!</h3>
+        </div>
+        <div class="banner-box2">
+            <h2>SUNGLASSES</h2>
+            <h2>DISCOUNT</h2>
+            <h3>Get up to 50% off on selected styles</h3>
+        </div>
+        <div class="banner-box3">
+            <h2>SEASONAL SALE</h2>
+            <h3>Winter Collection -50 OFF</h3>
+        </div>
+    </section>
 
     <!-- NEWSLETTER SECTION -->
 
@@ -190,7 +205,7 @@
         </div>
 
         <div class="copyright">
-            <p>@ 2024, All rights reserved</p>
+            <p>&copy; 2024-2025 TimeTrend. All rights reserved.</p>
         </div>
     </footer>
 </body>
