Clear unnecessary parts of the main page

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!-- NAVIGATION -->
     <section id="header">
         <a href="#"><img src="./img/logo.png" class="logo" alt="logo" width="80"></a>
         <nav>
@@ -20,16 +21,15 @@
                 <li><a href="/products.html">Shop</a></li>
                 <li><a href="/about.html">About</a></li>
                 <li><a href="/reviews.html">Reviews</a></li>
-                <!-- <li><a href="/account.html"><img src="./img/user-icon.png" alt="user-icon" width="24"></a></li>
-                <li><a href="/cart.html"><img src="./img/bag-icon.png" alt="bag-icon" width="24"></a></li> -->
             </ul>
         </nav>
         <ul class="navbar">
-            <li><a href="/account.html"><img src="./img/user-icon.png" alt="user-icon" width="24"></a></li>
+            <li><a href="/templates/login.html"><img src="./img/user-icon.png" alt="user-icon" width="24"></a></li>
             <li><a href="/cart.html"><img src="./img/bag-icon.png" alt="bag-icon" width="24"></a></li>
         </ul>
     </section>
 
+    <!-- HERO SECTION -->
     <section id="hero">
         <!-- <h4>Trade in offer</h4>
         <h2>Super value deals</h2>
@@ -45,6 +45,7 @@
         <!-- <img src="./img/pexels-chloe-1043474-Photoroom.png-Photoroom.png" alt=""> -->
     </section>
 
+    <!-- LATEST PRODUCTS -->
     <section class="section new-arrival">
         <div class="title">
             <h2>Latest Products</h2>
@@ -151,8 +152,6 @@
             <h3>Winter Collection -50 OFF</h3>
         </div>
     </section>
-
-    <!-- NEWSLETTER SECTION -->
 
     <!-- FOOTER -->
     <footer>
