--- a/timetrend-store/src/app/core/components/navigation/navigation.component.html
+++ b/timetrend-store/src/app/core/components/navigation/navigation.component.html
@@ -1,15 +1,17 @@
 <header>
-    <a href="#"><img src="../../../../assets/images/logo.png" class="logo" alt="logo" width="80"></a>
+    <img src="../../../../assets/images/logo.png" class="logo" alt="logo" width="80">
     <nav>
         <ul class="navbar">
-            <li><a class="active" href="#">Home</a></li>
+            <li><a href="#">Home</a></li>
             <li><a href="#">Shop</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Reviews</a></li>
         </ul>
     </nav>
-    <ul class="navbar">
-        <li><a href="#"><i class="fa-solid fa-user"></i></a></li>
-        <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
-    </ul>
+    <nav>
+        <ul class="navbar">
+            <li><a href="#"><i class="fa-solid fa-user"></i></a></li>
+            <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
+        </ul>
+    </nav>
 </header>
