--- a/timetrend-store/src/app/core/components/navigation/navigation.component.html
+++ b/timetrend-store/src/app/core/components/navigation/navigation.component.html
@@ -2,16 +2,16 @@
     <img src="../../../../assets/images/logo.png" class="logo" alt="logo" width="80">
     <nav>
         <ul class="navbar">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Shop</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Reviews</a></li>
+            <li><a routerLink="/">Home</a></li>
+            <li><a routerLink="/products">Products</a></li>
+            <li><a routerLink="/about">About</a></li>
+            <li><a routerLink="/reviews">Reviews</a></li>
         </ul>
     </nav>
     <nav>
         <ul class="navbar">
+            <li><a routerLink="/order"><i class="fa-solid fa-cart-shopping"></i></a></li>
             <li><a href="#"><i class="fa-solid fa-user"></i></a></li>
-            <li><a href="#"><i class="fa-solid fa-cart-shopping"></i></a></li>
         </ul>
     </nav>
 </header>
