--- a/timetrend-store/src/styles.css
+++ b/timetrend-store/src/styles.css
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 @import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");
 
 * {
@@ -8,7 +7,7 @@
   font-family: "Nunito Sans", sans-serif;
 }
 
-h1 {
+/* h1 {
   font-size: 75px;
   line-height: 80px;
   color: #222;
@@ -18,25 +17,25 @@ h2 {
   font-size: 56px;
   line-height: 80px;
   color: #222;
-}
+} */
 
-h4 {
+/* h4 {
   font-size: 20px;
   color: #222;
-}
+} */
 
-h6 {
+/* h6 {
   font-weight: 700;
   font-size: 12px;
-}
+} */
 
-p {
+/* p {
   font-size: 16px;
   color: #465b52;
   margin: 15px 0 20px 0;
-}
+} */
 
-body {
+/* body {
   color: white;
   width: 100%;
-}
+} */
