Update the hero section component style

--- a/timetrend-store/src/app/modules/home/components/hero-section/hero-section.component.html
+++ b/timetrend-store/src/app/modules/home/components/hero-section/hero-section.component.html
@@ -3,6 +3,6 @@
     <h1>Enjoy Big Savings Now!</h1>
     <h4>Get exclusive discounts on all products.</h4>
     <div class="distance">
-        <a>Shop Now</a>
+        <app-shop-link-button></app-shop-link-button>
     </div>
 </section>
