--- a/timetrend-store/src/app/modules/home/pages/home/home.component.html
+++ b/timetrend-store/src/app/modules/home/pages/home/home.component.html
@@ -1,124 +1,5 @@
-<section id="hero">
-    <!-- <h4>Trade in offer</h4>
-        <h2>Super value deals</h2>
-        <h1>On all products</h1>
-        <p>Save more with coupons & up to 70% off!</p>
-        <a href="#">Shop Now</a> -->
-    <h2>Limited Time Offer!</h2>
-    <h1>Enjoy Big Savings Now!</h1>
-    <h4>Get exclusive discounts on all products.</h4>
-    <div class="distance">
-        <button>Shop Now</button>
-    </div>
-    <!-- <img src="./img/pexels-chloe-1043474-Photoroom.png-Photoroom.png" alt=""> -->
-</section>
-
-<!-- LATEST PRODUCTS -->
-<section class="section new-arrival">
-    <div class="title">
-        <h2>Latest Products</h2>
-        <p>Explore our newest products and stay ahead of the trends.</p>
-    </div>
-
-    <div class="product-center">
-        <div class="product-item">
-            <div class="overlay">
-                <a href="#" class="product-thumb">
-                    <img src="../../../../../assets/images/t-shirt-model.jpg" alt="product">
-                </a>
-            </div>
-            <div class="product-info">
-                <span>MEN'S CLOTHES</span>
-                <h4 class="product-name">Nike T-Shirt</h4>
-                <h4 class="price">$1700</h4>
-            </div>
-            <ul class="icons">
-                <li><a href="/aboput.html"><i class="fa-solid fa-magnifying-glass"></i></a></li>
-                <li><i class="fa-solid fa-cart-shopping"></i></li>
-            </ul>
-        </div>
-        <div class="product-item">
-            <div class="overlay">
-                <a href="#" class="product-thumb">
-                    <img src="../../../../../assets/images/t-shirt-model.jpg" alt="product">
-                </a>
-            </div>
-            <div class="product-info">
-                <span>MEN'S CLOTHES</span>
-                <h4 class="product-name">Nike T-Shirt</h4>
-                <h4 class="price">$1700</h4>
-            </div>
-            <ul class="icons">
-                <li><i class="fa-solid fa-magnifying-glass"></i></li>
-                <li><i class="fa-solid fa-cart-shopping"></i></li>
-            </ul>
-        </div>
-        <div class="product-item">
-            <div class="overlay">
-                <a href="#" class="product-thumb">
-                    <img src="../../../../../assets/images/t-shirt-model.jpg" alt="product">
-                </a>
-            </div>
-            <div class="product-info">
-                <span>MEN'S CLOTHES</span>
-                <h4 class="product-name">Nike T-Shirt</h4>
-                <h4 class="price">$1700</h4>
-            </div>
-            <ul class="icons">
-                <li><i class="fa-solid fa-magnifying-glass"></i></li>
-                <li><i class="fa-solid fa-cart-shopping"></i></li>
-            </ul>
-        </div>
-        <div class="product-item">
-            <div class="overlay">
-                <a href="#" class="product-thumb">
-                    <img src="../../../../../assets/images/t-shirt-model.jpg" alt="product">
-                </a>
-            </div>
-            <div class="product-info">
-                <span>MEN'S CLOTHES</span>
-                <h4 class="product-name">Nike T-Shirt</h4>
-                <h4 class="price">$1700</h4>
-            </div>
-            <ul class="icons">
-                <li><i class="fa-solid fa-magnifying-glass"></i></li>
-                <li><i class="fa-solid fa-cart-shopping"></i></li>
-            </ul>
-        </div>
-        <div class="product-item">
-            <div class="overlay">
-                <a href="#" class="product-thumb">
-                    <img src="../../../../../assets/images/t-shirt-model.jpg" alt="product">
-                </a>
-            </div>
-            <div class="product-info">
-                <span>MEN'S CLOTHES</span>
-                <h4 class="product-name">Nike T-Shirt</h4>
-                <h4 class="price">$1700</h4>
-            </div>
-            <ul class="icons">
-                <li><i class="fa-solid fa-magnifying-glass"></i></li>
-                <li><i class="fa-solid fa-cart-shopping"></i></li>
-            </ul>
-        </div>
-    </div>
-</section>
-
-<!-- PROMOTIONS SECTION -->
-<section id="banners">
-    <div class="banner-box1">
-        <h2>Sportswear Sale</h2>
-        <h3>Score big savings on top brands!</h3>
-    </div>
-    <div class="banner-box2">
-        <h2>SUNGLASSES</h2>
-        <h2>DISCOUNT</h2>
-        <h3>Get up to 50% off on selected styles</h3>
-    </div>
-    <div class="banner-box3">
-        <h2>SEASONAL SALE</h2>
-        <h3>Winter Collection -50 OFF</h3>
-    </div>
-</section>
-
+<app-navigation></app-navigation>
+<app-hero-section></app-hero-section>
+<app-latest-products></app-latest-products>
+<app-promotions></app-promotions>
 <app-footer></app-footer>
