--- a/timetrend-store/src/app/modules/products/pages/products/products.component.html
+++ b/timetrend-store/src/app/modules/products/pages/products/products.component.html
@@ -1,2 +1,5 @@
-<p>products works!</p>
+<app-navigation></app-navigation>
+<div class="height">
+    <app-all-products></app-all-products>
+</div>
 <app-footer></app-footer>
