--- a/timetrend-store/src/app/modules/products/components/all-products/all-products.component.html
+++ b/timetrend-store/src/app/modules/products/components/all-products/all-products.component.html
@@ -4,18 +4,26 @@
     </div>
 
     <div class="product-center">
-        <ng-container *ngIf="products$ | async as products; else loadingTemplate">
+        <ng-container *ngIf="loading">
+            <app-loading></app-loading>
+        </ng-container>
+        <ng-container *ngIf="products$ | async as products">
             <app-product *ngFor="let product of products" [product]="product"></app-product>
+        </ng-container>
+        <ng-container *ngIf="errorMessage != undefined">
+            <div class="error-message">
+                <app-error [error]="errorMessage"></app-error>
+            </div>
         </ng-container>
     </div>
 
-    <ng-template #loadingTemplate>
+    <!-- <ng-template #loadingTemplate>
         <app-loading></app-loading>
     </ng-template>
 
     <ng-template #errorTemplate>
         <app-error [error]="errorMessage"></app-error>
-    </ng-template>
+    </ng-template> -->
 
     <app-pages-list></app-pages-list>
 </section>
