--- a/timetrend-store/src/app/modules/auth/pages/login/login.component.html
+++ b/timetrend-store/src/app/modules/auth/pages/login/login.component.html
@@ -1,23 +1,25 @@
+<app-navigation></app-navigation>
 <div class="container">
     <div class="wrapper">
         <div class="title">
             <span>Welcome Back!</span>
         </div>
-        <form action="#">
+        <app-login-form></app-login-form>
+        <!-- <form action="#">
             <div class="row">
                 <i class="fa-solid fa-user"></i>
-                <input type="text" placeholder="Email" required>
+                <input type="text" placeholder="Email" name="email" [(ngModel)]="email" required>
             </div>
             <div class="row">
                 <i class="fa-solid fa-lock"></i>
-                <input type="password" placeholder="Password" required>
+                <input type="password" placeholder="Password" name="password" [(ngModel)]="password" required>
             </div>
             <div class="row button">
-                <input type="submit" value="Login">
+                <input type="submit" value="Login" (click)="login()">
             </div>
             <div class="signUp-link">
-                Not a member? <a href="#">Sign up now</a>
+                Not a member? <a routerLink="/register">Sign up now</a>
             </div>
-        </form>
+        </form> -->
     </div>
 </div>
