--- a/timetrend-store/src/app/modules/auth/pages/register/register.component.html
+++ b/timetrend-store/src/app/modules/auth/pages/register/register.component.html
@@ -1,31 +1,9 @@
+<app-navigation></app-navigation>
 <div class="container">
     <div class="wrapper">
         <div class="title">
             <span>Create Account</span>
         </div>
-        <form action="#">
-            <div class="row">
-                <i class="fa-solid fa-user"></i>
-                <input type="text" placeholder="Name" required>
-            </div>
-            <div class="row">
-                <i class="fa-solid fa-envelope"></i>
-                <input type="email" placeholder="Email" required>
-            </div>
-            <div class="row">
-                <i class="fa-solid fa-lock"></i>
-                <input type="password" placeholder="Password" required>
-            </div>
-            <div class="row">
-                <i class="fa-solid fa-key"></i>
-                <input type="password" placeholder="Re-password" required>
-            </div>
-            <div class="row button">
-                <input type="submit" value="Sign Up">
-            </div>
-            <div class="signUp-link">
-                Already have an account? <a href="#">Log In</a>
-            </div>
-        </form>
+        <app-register-form></app-register-form>
     </div>
 </div>
