Add the about page

--- a/timetrend-store/src/app/modules/information/pages/about/about.component.html
+++ b/timetrend-store/src/app/modules/information/pages/about/about.component.html
@@ -1,2 +1,42 @@
-<p>about works!</p>
+<app-navigation></app-navigation>
+<div class="body">
+    <div class="title">
+        <h1>About Us</h1>
+    </div>
+    <div class="services">
+        <div class="card">
+            <div class="icon">
+                <i class="fa-solid fa-truck"></i>
+            </div>
+            <h2>Fast Delivery</h2>
+            <p>Looking for fast and reliable delivery? Look no further! Our website offers quick and efficient delivery
+                service to
+                ensure your orders reach you in no time. Shop now and experience the convenience of fast delivery with
+                us!</p>
+        </div>
+        <div class="card">
+            <div class="icon">
+                <i class="fa-solid fa-house-user"></i>
+            </div>
+            <h2>Free Shipping</h2>
+            <p>Exciting news! Enjoy FREE shipping on all orders from our website. That's right - no minimum purchase
+                required. Shop now
+                and take advantage of our amazing offer. Don't miss out on this opportunity for convenient and
+                cost-effective shopping.
+                Start browsing our website today!</p>
+        </div>
+        <div class="card">
+            <div class="icon">
+                <i class="fa-solid fa-medal"></i>
+            </div>
+            <h2>Best Quality</h2>
+            <p>Discover the best quality products on our website, curated to meet your standards. Our extensive
+                selection includes
+                top-of-the-line goods that are guaranteed to surpass expectations. Shop confidently with us and
+                experience superior
+                quality with every purchase. Start exploring our website now and elevate your shopping experience to the
+                next level.</p>
+        </div>
+    </div>
+</div>
 <app-footer></app-footer>
