--- a/timetrend-store/src/app/modules/information/pages/about/about.component.css
+++ b/timetrend-store/src/app/modules/information/pages/about/about.component.css
@@ -1,5 +1,62 @@
-p {
-  font-size: 32px;
-  background-color: burlywood;
-  padding: 20px;
+.body {
+  width: 100%;
+  background-color: #fff;
+}
+
+.title h1 {
+  text-align: center;
+  padding-top: 50px;
+  font-size: 42px;
+  color: #dc143c;
+}
+
+.title h1::after {
+  content: "";
+  height: 4px;
+  width: 230px;
+  background-color: #dc143c;
+  display: block;
+  margin: auto;
+}
+
+.services {
+  width: 85%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 75px auto;
+  text-align: center;
+}
+
+.card {
+  width: 100%;
+  min-height: 400px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  margin: 0px 20px;
+  padding: 20px 20px;
+  background-color: #efefef;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.card .icon {
+  font-size: 35px;
+  margin-bottom: 10px;
+  color: #dc143c;
+}
+
+.card h2 {
+  font-size: 28px;
+  color: #dc143c;
+  margin-bottom: 20px;
+}
+
+.card p {
+  font-size: 18px;
+  margin-bottom: 30px;
+  line-height: 1.5;
+  color: #5e5e5e;
 }
