Add the reviews page

--- a/timetrend-store/src/app/modules/information/pages/reviews/reviews.component.css
+++ b/timetrend-store/src/app/modules/information/pages/reviews/reviews.component.css
@@ -1,5 +1,7 @@
-p {
-  font-size: 32px;
-  background-color: burlywood;
-  padding: 20px;
+#testimonials {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
 }
