--- a/timetrend-store/src/app/modules/information/pages/reviews/reviews.component.html
+++ b/timetrend-store/src/app/modules/information/pages/reviews/reviews.component.html
@@ -1,2 +1,6 @@
-<p>reviews works!</p>
+<app-navigation></app-navigation>
+<section class="testimonials">
+    <app-reviews-heading></app-reviews-heading>
+    <app-reviews-boxes></app-reviews-boxes>
+</section>
 <app-footer></app-footer>
